<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/details_et_bg"
    android:orientation="vertical"
    tools:context="com.example.arbaz.sparshdemo.Screens.AddDetailsActivity">

    <include layout="@layout/custom_actionbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/TextLabel">

                    <EditText
                        android:id="@+id/et_fName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/m_f_name"
                        android:lines="1"
                        android:paddingLeft="@dimen/_3sdp"
                        android:textSize="@dimen/_12sdp" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    app:hintTextAppearance="@style/TextLabel"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_houseHolder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/m_hoh"
                        android:lines="1"
                        android:paddingLeft="@dimen/_3sdp"
                        android:textSize="@dimen/_12sdp" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    app:hintTextAppearance="@style/TextLabel"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_occHouseHolder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/m_ohh"
                        android:lines="1"
                        android:paddingLeft="@dimen/_3sdp"
                        android:textSize="@dimen/_12sdp" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    app:hintTextAppearance="@style/TextLabel"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_age"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:hint="@string/m_age"
                        android:lines="1"
                        android:paddingLeft="@dimen/_3sdp"
                        android:textSize="@dimen/_12sdp" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/m_gender" />

                <RadioGroup
                    android:id="@+id/genderGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="Male" />

                    <RadioButton
                        android:id="@+id/rb_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Female" />


                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    app:hintTextAppearance="@style/TextLabel"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_nameOfMember"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/m_nofm"
                        android:lines="1"
                        android:paddingLeft="@dimen/_3sdp"
                        android:textSize="@dimen/_12sdp" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_add_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/btn_color"
                    android:text="@string/btn_save_details_txt"
                    android:textAllCaps="false"
                    android:textColor="@color/btn_txt_color"
                    android:textSize="@dimen/_15sdp" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>


</LinearLayout>
