<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_5sdp"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/_5sdp"
            app:cardCornerRadius="@dimen/_7sdp"
            app:cardUseCompatPadding="true"
            card_view:cardCornerRadius="10dp"
            card_view:cardElevation="3dp"
            card_view:cardUseCompatPadding="true">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/details_tv_bg"
                        android:padding="@dimen/_3sdp"
                        android:paddingLeft="@dimen/_5sdp"
                        android:text="@string/m_f_name"
                        android:textSize="@dimen/_11sdp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_fname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_2sdp"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:ellipsize="end"
                        android:lines="1"
                        android:paddingLeft="@dimen/_5sdp"
                        android:textSize="@dimen/_13sdp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/details_tv_bg"
                        android:padding="@dimen/_3sdp"
                        android:paddingLeft="@dimen/_5sdp"
                        android:text="@string/m_hoh"
                        android:textSize="@dimen/_11sdp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_hoh"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_2sdp"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:ellipsize="end"
                        android:lines="1"
                        android:paddingLeft="@dimen/_5sdp"
                        android:textSize="@dimen/_13sdp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="@dimen/_3sdp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.33"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/m_ohh_tv"
                            android:textSize="@dimen/_11sdp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_oohh"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:lines="1"
                            android:text="@string/m_ohh_tv"
                            android:textSize="@dimen/_13sdp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.33"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/m_age"
                            android:textSize="@dimen/_11sdp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_age"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/m_age"
                            android:textSize="@dimen/_13sdp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.33"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/m_gender"
                            android:textSize="@dimen/_11sdp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_gender"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/m_gender"
                            android:textSize="@dimen/_13sdp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/details_tv_bg"
                        android:padding="@dimen/_3sdp"
                        android:paddingLeft="@dimen/_5sdp"
                        android:text="@string/m_nofm"
                        android:textSize="@dimen/_11sdp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_nofm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_2sdp"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:paddingLeft="@dimen/_5sdp"
                        android:textSize="@dimen/_13sdp" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</LinearLayout>